# cortex-ai

./: .gitignore  BACKEND_SETUP.md  CHANGELOG.md  Dockerfile  FILES_MANIFEST.txt  FILE_STRUCTURE.txt  IMPLEMENTATION_SUMMARY.md  LICENSE  QUICKSTART.md  README.md  config.example.yaml  docker-compose.yml  pyproject.toml
backend/: config.py  database.py  main.py  requirements.txt
backend/providers/: __init__.py  ollama.py  openai_compat.py
backend/routers/: __init__.py  chat.py  conversations.py  history.py  models.py  pipelines.py  templates.py  tools.py
cli/cortex_cli/: __init__.py  main.py
docs/: index.html  screenshot.md
docs/app/: index.html
docs/app/assets/: index-9DmlqI5q.css  index-D5CcmQJW.js
examples/: __init__.py  batch_templates.py  chat_example.py  custom_pipeline.py  streaming_chat.py
frontend/: COMPONENT_GUIDE.md  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/Chat/: ChatMessage.tsx  ChatView.tsx  ConversationList.tsx
frontend/src/components/Dashboard/: DashboardView.tsx  StatCard.tsx  TokenChart.tsx  UsageTable.tsx
frontend/src/components/Pipeline/: PipelineBuilder.tsx  PipelineView.tsx
frontend/src/components/Templates/: TemplateBuilder.tsx  TemplateModal.tsx  TemplatesView.tsx
frontend/src/components/Tools/: ToolsView.tsx
frontend/src/hooks/: useHealth.ts  useModels.ts
frontend/src/lib/: api.ts
tests/: __init__.py  test_backend.py
