[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cortex-ai"
version = "0.1.0"
description = "Your local-first AI command center — multi-model chat, pipelines, and CLI"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Cortex AI Team"}]
requires-python = ">=3.10"
keywords = ["ai", "llm", "ollama", "local-ai", "cli", "fastapi"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "httpx>=0.26.0",
    "sqlalchemy>=2.0.0",
    "aiosqlite>=0.20.0",
    "pydantic>=2.5.0",
    "pyyaml>=6.0.1",
    "typer>=0.9.0",
    "rich>=13.7.0",
    "python-multipart>=0.0.6",
]

[project.scripts]
cortex = "cortex_cli.main:app"

[project.optional-dependencies]
dev = ["pytest>=7.4.0", "pytest-asyncio>=0.23.0", "httpx>=0.26.0"]

[tool.setuptools.packages.find]
where = ["cli", "backend", "."]
include = ["cortex_cli*"]

[project.urls]
Homepage = "https://acunningham-ship-it.github.io/cortex-ai"
Repository = "https://github.com/acunningham-ship-it/cortex-ai"
Documentation = "https://acunningham-ship-it.github.io/cortex-ai"
